Issue #1940208 by pameeela, mgifford, echoz: Fixed Contrast for add & remove shortcut links on overlay not sufficient for WCAG - Regression.

--- a/core/themes/seven/style-rtl.css
+++ b/core/themes/seven/style-rtl.css
@@ -145,13 +145,6 @@ ol.task-list li.active {
   margin: -1.4em 0 0.3em 0;
 }
 
-/* Shortcut theming */
-div.add-or-remove-shortcuts {
-  float: none;
-  padding-left: 0;
-  padding-right: 6px;
-}
-
 /* Recent content block */
 #block-node-recent .more-link {
   padding: 0 0 5px 5px;
